#18418 closed bug (fixed)

realtekwifi: NULL dereference on boot

Reported by: waspentalive Owned by: waddlesplash
Priority: normal Milestone: R1/beta5
Component: Drivers/Network/realtekwifi Version: R1/beta4
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Image attached to ticket

Haiku panics after all the icons light up but before the desktop appears.

Attachments (1)

vmpagefault.jpg (4.9 MB ) - added by waspentalive 21 months ago.
Screen picture of hang/panic

Change History (11)

by waspentalive, 21 months ago

Attachment: vmpagefault.jpg added

Screen picture of hang/panic

comment:1 by waddlesplash, 21 months ago

Component: - GeneralDrivers/Network/realtekwifi
Owner: changed from nobody to waddlesplash
Summary: Haiku panics before boot completesrealtekwifi: NULL dereference on boot

This is strange, it's a NULL dereference in the realtekwifi driver initialization routine. I will have to look into that.

Do you have a Realtek WiFi dongle connected to this machine? You might try booting with it disconnected.

comment:2 by waddlesplash, 21 months ago

Version: R1/beta4

in reply to:  2 comment:3 by waspentalive, 21 months ago

Replying to waddlesplash: There are no external dongles connected to the machine.

comment:4 by waddlesplash, 21 months ago

Please retest after hrev57022.

If it still crashes, then please boot with the "realtekwifi" driver blocklisted (this is possible using just the bootloader, the file you want to disable is add-ons/kernel/drivers/bin/realtekwifi.) Once booted, please attach a copy of your syslog, and then run listusb -v (warning that this may also crash your system.)

in reply to:  4 comment:5 by waspentalive, 21 months ago

Replying to waddlesplash:

Please retest after hrev57022.

I am sorry, I looked at the download page but I don't see any reference to hrev nor do I understand the number 57022 - Is this the currently available download?

The other parts of your request concern me a little as I am, at least for Haiku, a real noob user. It looks like "Just the boot loader" is a link, I will go study that - the rest of that I have no real idea how to do. Sorry.

Just out of curiosity am I the only one who is having this issue?

comment:6 by waddlesplash, 21 months ago

"hrev57022" specifies a development (nightly) revision. You can download this specifically from the nightly images pages, here's a direct link for x86_64: https://download.haiku-os.org/nightly-images/x86_64/

The "bootloader" link goes to the documentation for the bootloader, it instructs you how to get into the bootloader's menu and then where the "block list" options are. But if you test with the newest nightly build and find it doesn't crash anymore, then you will not need to do this.

in reply to:  4 comment:7 by waspentalive, 21 months ago

Replying to waddlesplash:

Please retest after hrev57022.

It seems to be working under 57023. I am now installing to my laptop.

comment:8 by waddlesplash, 21 months ago

Does the WiFi work? Please attach a syslog here.

comment:9 by waspentalive, 21 months ago

Now I am running into a different problem. I think my BIOS is to blame though. It does not seem to see the instance of Haiku installed on my NVME drive. I only boot into working Haiku when I have the install medium in the USB port. Even then I think it has booted from the install medium and is using the /home there instead of on my internal drive.

I did "Write Boot Sector to '(nvme)haiku' "

I will try a little more to see if I can get around the BIOS, but probably I will install Linux on the metal and run Haiku inside of a VM using Virtual Machine Manager.

Yes, WiFi works. I have connected to my local network both via WiFi and Wired at the same time. I am replying from a different laptop so I am not sure how to get a syslog for you.

comment:10 by waddlesplash, 21 months ago

Milestone: UnscheduledR1/beta5
Resolution: fixed
Status: newclosed

If your machine has NVMe, it likely boots via EFI, which has more setup required to install the bootloader. See this page for instructions: https://www.haiku-os.org/guides/uefi_booting/

Good to know everything works! If WiFi is fully functional, then no need for a syslog, I suppose.

Note: See TracTickets for help on using tickets.