freebsd_network: Add missing NULL check in get_usb_device_attach_arg.

May fix #18418.